GH-1192 - Migrate code base to jSpecify for nullness verification.